# juodas-calc

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build.rs  juodas-calc.desktop
icons/old/: calculator.ico.old  calculator.svg.old
src/: main.rs
src/calculator/: error.rs  mod.rs  operand.rs  operator.rs  tests.rs
src/clipboard/: mod.rs
src/gui/: mod.rs
