[package]
name = "juodas-calc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.winres]
OriginalFilename = "JUODAS-CALC.EXE"
FileDescription = "Simple calculator"

[profile.release]
strip = true
lto = true
codegen-units = 1

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"

[dependencies]
arboard = "3.2.0"
#iced = { version = "0.6.0", features = ["image_rs", "debug"] }
iced = { version = "0.6", features = ["image_rs", "debug"] }
image = "0.24.6"
lazy_static = "1.4.0"
rust_decimal = { version = "1.26.1", features = ["maths"] }
rust_decimal_macros = "1.26.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

[build-dependencies]
winres = { git = "https://github.com/Nilstrieb/winres", branch = "linking-flags" }
#winres = "0.1.12"
